fix(SCSS): media queries * Modifie la taille d'écran pour l'alignement des boutons de la page welcome sur tout écran sauf mobile

--- a/frontend/src/scss/pages/welcome.scss
+++ b/frontend/src/scss/pages/welcome.scss
@@ -10,7 +10,7 @@
 			margin-bottom: 2rem;
 		}
 
-		@media (min-width: $breakpoint-large) {
+		@media (min-width: 481px) {
 			justify-content: center;
 			margin-bottom: 3.5rem;
 			gap: 2rem;
